--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -19,8 +19,8 @@
         <div class="container header__container">
             <!-- Логотип -->
             <div class="header__logo">
-                <a href="/" class="header__logo-link" title="ZLATOLIT.RU">
-                    <img src="../assets/icons/logo.svg" alt="ZLATOLIT.RU" width="249" height="74"
+                <a href="/" class="header__logo-link" title="LEMEZIT.RU">
+                    <img src="../assets/icons/logo.svg" alt="LEMEZIT.RU" width="249" height="74"
                         class="header__logo-img" />
                 </a>
             </div>
@@ -60,8 +60,8 @@
                                     доставка</a>
                             </li>
                             <li class="nav__item">
-                                <a href="mailto:info@zlatolit.ru" class="nav__link nav__link--email"
-                                    title="Отправьте письмо на info@zlatolit.ru">info@zlatolit.ru</a>
+                                <a href="mailto:info@lemezit.ru" class="nav__link nav__link--email"
+                                    title="Отправьте письмо на info@lemezit.ru">info@lemezit.ru</a>
                             </li>
                         </ul>
                     </div>
@@ -112,7 +112,7 @@
                     <ul class="sidebar__menu-left">
                         <a href="#" class="sidebar__menu-item" title="Гранит">Гранит</a>
                         <a href="#" class="sidebar__menu-item" title="Лемезит">Лемезит</a>
-                        <a href="#" class="sidebar__menu-item" title="Златолит">Златолит</a>
+                        <a href="#" class="sidebar__menu-item" title="лемезит">лемезит</a>
                         <a href="#" class="sidebar__menu-item" title="Сланец">Сланец</a>
                     </ul>
                     <span class="sidebar__divider"></span>
@@ -154,9 +154,9 @@
                     <a href="tel:+79876543211" class="sidebar__phone" title="Позвонить по номеру +7 (987) 654-32-11">
                         +7 (987) 654-32-11
                     </a>
-                    <a href="mailto:info@zlatolit.ru" class="sidebar__email"
-                        title="Отправить письмо на info@zlatolit.ru">
-                        info@zlatolit.ru
+                    <a href="mailto:info@lemezit.ru" class="sidebar__email"
+                        title="Отправить письмо на info@lemezit.ru">
+                        info@lemezit.ru
                     </a>
                 </address>
             </div>
@@ -191,10 +191,10 @@
             <div class="container blog-page__container">
                 <div class="blog__card">
                     <span class="badge badge--blur blog__badge">Помощь с выбором</span>
-                    <img src="../assets/images/blog.jpg" alt="Что лучше - златолит или лемезит?" class="blog__image"
+                    <img src="../assets/images/blog.jpg" alt="Что лучше - лемезит или лемезит?" class="blog__image"
                         width="360" height="318" />
                     <h2 class="blog__title">
-                        Что лучше - златолит или лемезит?
+                        Что лучше - лемезит или лемезит?
                     </h2>
                     <blockquote class="blog__text">
                         В работе с клиентами нам часто приходится
@@ -211,10 +211,10 @@
                 </div>
                 <div class="blog__card">
                     <span class="badge badge--blur blog__badge">Помощь с выбором</span>
-                    <img src="../assets/images/blog.jpg" alt="Что лучше - златолит или лемезит?" class="blog__image"
+                    <img src="../assets/images/blog.jpg" alt="Что лучше - лемезит или лемезит?" class="blog__image"
                         width="360" height="318" />
                     <h2 class="blog__title">
-                        Что лучше - златолит или лемезит?
+                        Что лучше - лемезит или лемезит?
                     </h2>
                     <blockquote class="blog__text">
                         В работе с клиентами нам часто приходится
@@ -231,10 +231,10 @@
                 </div>
                 <div class="blog__card">
                     <span class="badge badge--blur blog__badge">Помощь с выбором</span>
-                    <img src="../assets/images/blog.jpg" alt="Что лучше - златолит или лемезит?" class="blog__image"
+                    <img src="../assets/images/blog.jpg" alt="Что лучше - лемезит или лемезит?" class="blog__image"
                         width="360" height="318" />
                     <h2 class="blog__title">
-                        Что лучше - златолит или лемезит?
+                        Что лучше - лемезит или лемезит?
                     </h2>
                     <blockquote class="blog__text">
                         В работе с клиентами нам часто приходится
@@ -251,10 +251,10 @@
                 </div>
                 <div class="blog__card">
                     <span class="badge badge--blur blog__badge">Помощь с выбором</span>
-                    <img src="../assets/images/blog.jpg" alt="Что лучше - златолит или лемезит?" class="blog__image"
+                    <img src="../assets/images/blog.jpg" alt="Что лучше - лемезит или лемезит?" class="blog__image"
                         width="360" height="318" />
                     <h2 class="blog__title">
-                        Что лучше - златолит или лемезит?
+                        Что лучше - лемезит или лемезит?
                     </h2>
                     <blockquote class="blog__text">
                         В работе с клиентами нам часто приходится
@@ -271,10 +271,10 @@
                 </div>
                 <div class="blog__card">
                     <span class="badge badge--blur blog__badge">Помощь с выбором</span>
-                    <img src="../assets/images/blog.jpg" alt="Что лучше - златолит или лемезит?" class="blog__image"
+                    <img src="../assets/images/blog.jpg" alt="Что лучше - лемезит или лемезит?" class="blog__image"
                         width="360" height="318" />
                     <h2 class="blog__title">
-                        Что лучше - златолит или лемезит?
+                        Что лучше - лемезит или лемезит?
                     </h2>
                     <blockquote class="blog__text">
                         В работе с клиентами нам часто приходится
@@ -297,10 +297,10 @@
     <footer class="footer">
         <div class="container footer__container">
             <!-- MOBILE LOGO -->
-            <a href="/" class="footer__logo-mobile" title="ZLATOLIT.RU"></a>
+            <a href="/" class="footer__logo-mobile" title="LEMEZIT.RU"></a>
             <!-- LEFT COLUMN: Logo, working -->
             <div class="footer__column footer__column--left">
-                <a href="/" class="footer__logo" title="ZLATOLIT.RU"></a>
+                <a href="/" class="footer__logo" title="LEMEZIT.RU"></a>
                 <div class="footer__working-hours">
                     <label class="footer__label" for="hours">Режим работы</label>
                     <ul class="footer__hours-list" aria-labelledby="hours">
@@ -327,8 +327,8 @@
                     <div class="footer__contact-item">
                         <div class="footer__contact-block">
                             <label class="footer__label" for="email">Электронная почта</label>
-                            <a href="mailto:info@zlatolit.ru" class="footer__email-link" title="Написать на почту">
-                                info@zlatolit.ru
+                            <a href="mailto:info@lemezit.ru" class="footer__email-link" title="Написать на почту">
+                                info@lemezit.ru
                             </a>
                         </div>
                     </div>
@@ -386,7 +386,7 @@
                     </li>
                 </ul>
                 <p class="footer__copyright" title="Авторские права">
-                    &copy; 2012-2025. <a href="/" class="footer__legal-link" title="ZLATOLIT.RU">ZLATOLIT.RU</a>. Все права защищены.
+                    &copy; 2012-2025. <a href="/" class="footer__legal-link" title="LEMEZIT.RU">LEMEZIT.RU</a>. Все права защищены.
                 </p>
             </div>
 
@@ -395,8 +395,8 @@
                 <div class="footer__contact-item">
                     <div class="footer__contact-block">
                         <label class="footer__label" for="email">Электронная почта</label>
-                        <a href="mailto:info@zlatolit.ru" class="footer__email-link" title="Написать на почту">
-                            info@zlatolit.ru
+                        <a href="mailto:info@lemezit.ru" class="footer__email-link" title="Написать на почту">
+                            info@lemezit.ru
                         </a>
                     </div>
                 </div>
@@ -483,9 +483,9 @@
                             <span class="categories__title">Лемезит</span>
                         </div>
                         <div class="categories__item">
-                            <img class="categories__image" src="../assets/images/category.jpg" alt="Златолит"
+                            <img class="categories__image" src="../assets/images/category.jpg" alt="лемезит"
                                 width="161" height="123" />
-                            <span class="categories__title">Златолит</span>
+                            <span class="categories__title">лемезит</span>
                         </div>
                         <div class="categories__item">
                             <img class="categories__image" src="../assets/images/category.jpg" alt="Сланец" width="161"
