--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex">
     <!-- Favicon для всех браузеров -->
     <link rel="icon" href="../favicon.ico" type="image/x-icon" />
-    <title>Брусчатка из сланца квадрат 100х100х40мм</title>
+    <title>Лемезит рваный бурый 120х90 см</title>
     <meta name="description"
         content="Купить брусчатку на заказ. Высокое качество, доставка по России. Дорого. Вечно. Эксклюзивно." />
     <meta name="keywords" content="брусчатка, купить брусчатку, тротуарная плитка" />
@@ -19,9 +19,9 @@
         <div class="container header__container">
             <!-- Логотип -->
             <div class="header__logo">
-                <a href="/" class="header__logo-link" title="ZLATOLIT.RU">
-                    <img src="../assets/icons/logo.svg" alt="ZLATOLIT.RU" width="230" height="75"
-                        class="header__logo-img" />
+                <a href="/" class="header__logo-link" title="LEMEZIT.RU">
+                    <!-- <img src="../assets/icons/logo.svg" alt="LEMEZIT.RU" width="230" height="75"
+                        class="header__logo-img" /> -->
                 </a>
             </div>
 
@@ -60,8 +60,8 @@
                                     доставка</a>
                             </li>
                             <li class="nav__item">
-                                <a href="mailto:info@zlatolit.ru" class="nav__link nav__link--email"
-                                    title="Отправьте письмо на info@zlatolit.ru">info@zlatolit.ru</a>
+                                <a href="mailto:info@lemezit.ru" class="nav__link nav__link--email"
+                                    title="Отправьте письмо на info@lemezit.ru">info@lemezit.ru</a>
                             </li>
                         </ul>
                     </div>
@@ -112,7 +112,7 @@
                     <ul class="sidebar__menu-left">
                         <a href="#" class="sidebar__menu-item" title="Гранит">Гранит</a>
                         <a href="#" class="sidebar__menu-item" title="Лемезит">Лемезит</a>
-                        <a href="#" class="sidebar__menu-item" title="Златолит">Златолит</a>
+                        <a href="#" class="sidebar__menu-item" title="лемезит">лемезит</a>
                         <a href="#" class="sidebar__menu-item" title="Сланец">Сланец</a>
                         <a href="#" class="sidebar__menu-item" title="Песчаник">Песчаник</a>
                         <a href="#" class="sidebar__menu-item" title="Кварцит">Кварцит</a>
@@ -156,9 +156,9 @@
                     <a href="tel:+79876543211" class="sidebar__phone" title="Позвонить по номеру +7 (987) 654-32-11">
                         +7 (987) 654-32-11
                     </a>
-                    <a href="mailto:info@zlatolit.ru" class="sidebar__email"
-                        title="Отправить письмо на info@zlatolit.ru">
-                        info@zlatolit.ru
+                    <a href="mailto:info@lemezit.ru" class="sidebar__email"
+                        title="Отправить письмо на info@lemezit.ru">
+                        info@lemezit.ru
                     </a>
                 </address>
             </div>
@@ -186,7 +186,7 @@
                             сланца</a>
                     </li>
                     <li class="breadcrumbs__item breadcrumbs__item--current" aria-current="page">
-                        Брусчатка из сланца квадрат 100х100х40мм
+                        Лемезит рваный бурый 120х90 см
                     </li>
                 </ol>
             </nav>
@@ -197,7 +197,7 @@
         <div class="container">
             <div class="page-title">
                 <h1 class="page-title__heading">
-                    Брусчатка из сланца квадрат 100х100х40мм
+                    Лемезит рваный бурый 120х90 см
                 </h1>
             </div>
         </div>
@@ -262,7 +262,7 @@
                     <!-- PRODUCT SLIDER main START -->
                     <div data-splide="main-image">
                         <div class="product__main-media splide">
-                            <span class="badge badge--hit product__badge">Хит</span>
+                            <span class="badge badge--warn product__badge">Хит!</span>
                             <div class="splide__track">
                                 <ul class="splide__list">
                                     <li class="product__main-item splide__slide">
@@ -684,7 +684,7 @@
         <section class="mission-block">
             <div class="container mission-block__container">
                 <h2 class="mission-block__title">Наша миссия</h2>
-                <p class="mission-block__text">Добывая и обрабатывая златолит, мы даём нашим клиентам возможность
+                <p class="mission-block__text">Добывая и обрабатывая лемезит, мы даём нашим клиентам возможность
                     преображать этот мир</p>
             </div>
         </section>
@@ -695,10 +695,10 @@
     <footer class="footer">
         <div class="container footer__container">
             <!-- MOBILE LOGO -->
-            <a href="/" class="footer__logo-mobile" title="ZLATOLIT.RU"></a>
+            <a href="/" class="footer__logo-mobile" title="LEMEZIT.RU"></a>
             <!-- LEFT COLUMN: Logo, working -->
             <div class="footer__column footer__column--left">
-                <a href="/" class="footer__logo" title="ZLATOLIT.RU"></a>
+                <a href="/" class="footer__logo" title="LEMEZIT.RU"></a>
                 <div class="footer__working-hours">
                     <label class="footer__label" for="hours">Режим работы</label>
                     <ul class="footer__hours-list" aria-labelledby="hours">
@@ -725,8 +725,8 @@
                     <div class="footer__contact-item">
                         <div class="footer__contact-block">
                             <label class="footer__label" for="email">Электронная почта</label>
-                            <a href="mailto:info@zlatolit.ru" class="footer__email-link" title="Написать на почту">
-                                info@zlatolit.ru
+                            <a href="mailto:info@lemezit.ru" class="footer__email-link" title="Написать на почту">
+                                info@lemezit.ru
                             </a>
                         </div>
                     </div>
@@ -784,7 +784,7 @@
                     </li>
                 </ul>
                 <p class="footer__copyright" title="Авторские права">
-                    &copy; 2012-2025. <a href="/" class="footer__legal-link" title="ZLATOLIT.RU">ZLATOLIT.RU</a>. Все
+                    &copy; 2012-2025. <a href="/" class="footer__legal-link" title="LEMEZIT.RU">LEMEZIT.RU</a>. Все
                     права защищены.
                 </p>
             </div>
@@ -794,8 +794,8 @@
                 <div class="footer__contact-item">
                     <div class="footer__contact-block">
                         <label class="footer__label" for="email">Электронная почта</label>
-                        <a href="mailto:info@zlatolit.ru" class="footer__email-link" title="Написать на почту">
-                            info@zlatolit.ru
+                        <a href="mailto:info@lemezit.ru" class="footer__email-link" title="Написать на почту">
+                            info@lemezit.ru
                         </a>
                     </div>
                 </div>
@@ -1018,9 +1018,9 @@
                             <span class="categories__title">Лемезит</span>
                         </div>
                         <div class="categories__item">
-                            <img class="categories__image" src="../assets/images/category.jpg" alt="Златолит"
+                            <img class="categories__image" src="../assets/images/category.jpg" alt="лемезит"
                                 width="161" height="123" />
-                            <span class="categories__title">Златолит</span>
+                            <span class="categories__title">лемезит</span>
                         </div>
                         <div class="categories__item">
                             <img class="categories__image" src="../assets/images/category.jpg" alt="Сланец" width="161"
