--- a/src/pages/materials.html
+++ b/src/pages/materials.html
@@ -19,9 +19,9 @@
         <div class="container header__container">
             <!-- Логотип -->
             <div class="header__logo">
-                <a href="/" class="header__logo-link" title="ZLATOLIT.RU">
-                    <img src="../assets/icons/logo.svg" alt="ZLATOLIT.RU" width="230" height="75"
-                        class="header__logo-img" />
+                <a href="/" class="header__logo-link" title="LEMEZIT.RU">
+                    <!-- <img src="../assets/icons/logo.svg" alt="LEMEZIT.RU" width="230" height="75"
+                        class="header__logo-img" /> -->
                 </a>
             </div>
 
@@ -60,8 +60,8 @@
                                     доставка</a>
                             </li>
                             <li class="nav__item">
-                                <a href="mailto:info@zlatolit.ru" class="nav__link nav__link--email"
-                                    title="Отправьте письмо на info@zlatolit.ru">info@zlatolit.ru</a>
+                                <a href="mailto:info@lemezit.ru" class="nav__link nav__link--email"
+                                    title="Отправьте письмо на info@lemezit.ru">info@lemezit.ru</a>
                             </li>
                         </ul>
                     </div>
@@ -112,7 +112,7 @@
                     <ul class="sidebar__menu-left">
                         <a href="#" class="sidebar__menu-item" title="Гранит">Гранит</a>
                         <a href="#" class="sidebar__menu-item" title="Лемезит">Лемезит</a>
-                        <a href="#" class="sidebar__menu-item" title="Златолит">Златолит</a>
+                        <a href="#" class="sidebar__menu-item" title="лемезит">лемезит</a>
                         <a href="#" class="sidebar__menu-item" title="Сланец">Сланец</a>
                     </ul>
                     <span class="sidebar__divider"></span>
@@ -154,9 +154,9 @@
                     <a href="tel:+79876543211" class="sidebar__phone" title="Позвонить по номеру +7 (987) 654-32-11">
                         +7 (987) 654-32-11
                     </a>
-                    <a href="mailto:info@zlatolit.ru" class="sidebar__email"
-                        title="Отправить письмо на info@zlatolit.ru">
-                        info@zlatolit.ru
+                    <a href="mailto:info@lemezit.ru" class="sidebar__email"
+                        title="Отправить письмо на info@lemezit.ru">
+                        info@lemezit.ru
                     </a>
                 </address>
             </div>
@@ -199,16 +199,16 @@
                         </p>
                         <p class="materials-page__text-item">
                             Оптовым продавцам камня: свои контакты и заявки можете оставлять на
-                            почте <a href="mailto:info@zlatolit.ru" title="Напишите нам"
-                                class="materials-page__link">info@zlatolit.ru</a> или звоните по телефону <a
+                            почте <a href="mailto:info@lemezit.ru" title="Напишите нам"
+                                class="materials-page__link">info@lemezit.ru</a> или звоните по телефону <a
                                 href="tel:+78002003017" class="materials-page__link" title="Позвоните нам">
                                 8 800 200 30 17
                             </a>.
                         </p>
                         <p class="materials-page__text-item">
                             Транспортным компаниям: предложения по доставке направляйте на почту <a
-                                href="mailto:info@zlatolit.ru" title="Напишите нам"
-                                class="materials-page__link">info@zlatolit.ru</a> или
+                                href="mailto:info@lemezit.ru" title="Напишите нам"
+                                class="materials-page__link">info@lemezit.ru</a> или
                             <a href="tel:+78002003017" class="materials-page__link" title="Позвоните нам">
                                 8 800 200 30 17
                             </a>. Нам интересны компании, обладающие собственным транспортным
@@ -217,8 +217,8 @@
                         </p>
                         <p class="materials-page__text-item">
                             Строительным бригадам: ваши контакты направляйте на почту <a
-                                href="mailto:info@zlatolit.ru" title="Напишите нам"
-                                class="materials-page__link">info@zlatolit.ru</a> Пожалуйста,
+                                href="mailto:info@lemezit.ru" title="Напишите нам"
+                                class="materials-page__link">info@lemezit.ru</a> Пожалуйста,
                             указывайте ваш регион и, желательно, примеры готовых работ. Мы с большим удовольствием будем
                             рекомендовать вас нашим клиентам.
                         </p>
@@ -243,16 +243,16 @@
                         </p>
                         <p class="materials-page__text-item">
                             Оптовым продавцам камня: свои контакты и заявки можете оставлять на
-                            почте <a href="mailto:info@zlatolit.ru" title="Напишите нам"
-                                class="materials-page__link">info@zlatolit.ru</a> или звоните по телефону <a
+                            почте <a href="mailto:info@lemezit.ru" title="Напишите нам"
+                                class="materials-page__link">info@lemezit.ru</a> или звоните по телефону <a
                                 href="tel:+78002003017" class="materials-page__link" title="Позвоните нам">
                                 8 800 200 30 17
                             </a>.
                         </p>
                         <p class="materials-page__text-item">
                             Транспортным компаниям: предложения по доставке направляйте на почту <a
-                                href="mailto:info@zlatolit.ru" title="Напишите нам"
-                                class="materials-page__link">info@zlatolit.ru</a> или
+                                href="mailto:info@lemezit.ru" title="Напишите нам"
+                                class="materials-page__link">info@lemezit.ru</a> или
                             <a href="tel:+78002003017" class="materials-page__link" title="Позвоните нам">
                                 8 800 200 30 17
                             </a>. Нам интересны компании, обладающие собственным транспортным
@@ -261,8 +261,8 @@
                         </p>
                         <p class="materials-page__text-item">
                             Строительным бригадам: ваши контакты направляйте на почту <a
-                                href="mailto:info@zlatolit.ru" title="Напишите нам"
-                                class="materials-page__link">info@zlatolit.ru</a> Пожалуйста,
+                                href="mailto:info@lemezit.ru" title="Напишите нам"
+                                class="materials-page__link">info@lemezit.ru</a> Пожалуйста,
                             указывайте ваш регион и, желательно, примеры готовых работ. Мы с большим удовольствием будем
                             рекомендовать вас нашим клиентам.
                         </p>
@@ -396,10 +396,10 @@
     <footer class="footer">
         <div class="container footer__container">
             <!-- MOBILE LOGO -->
-            <a href="/" class="footer__logo-mobile" title="ZLATOLIT.RU"></a>
+            <a href="/" class="footer__logo-mobile" title="LEMEZIT.RU"></a>
             <!-- LEFT COLUMN: Logo, working -->
             <div class="footer__column footer__column--left">
-                <a href="/" class="footer__logo" title="ZLATOLIT.RU"></a>
+                <a href="/" class="footer__logo" title="LEMEZIT.RU"></a>
                 <div class="footer__working-hours">
                     <label class="footer__label" for="hours">Режим работы</label>
                     <ul class="footer__hours-list" aria-labelledby="hours">
@@ -426,8 +426,8 @@
                     <div class="footer__contact-item">
                         <div class="footer__contact-block">
                             <label class="footer__label" for="email">Электронная почта</label>
-                            <a href="mailto:info@zlatolit.ru" class="footer__email-link" title="Написать на почту">
-                                info@zlatolit.ru
+                            <a href="mailto:info@lemezit.ru" class="footer__email-link" title="Написать на почту">
+                                info@lemezit.ru
                             </a>
                         </div>
                     </div>
@@ -485,7 +485,7 @@
                     </li>
                 </ul>
                 <p class="footer__copyright" title="Авторские права">
-                    &copy; 2012-2025. <a href="/" class="footer__legal-link" title="ZLATOLIT.RU">ZLATOLIT.RU</a>. Все права защищены.
+                    &copy; 2012-2025. <a href="/" class="footer__legal-link" title="LEMEZIT.RU">LEMEZIT.RU</a>. Все права защищены.
                 </p>
             </div>
 
@@ -494,8 +494,8 @@
                 <div class="footer__contact-item">
                     <div class="footer__contact-block">
                         <label class="footer__label" for="email">Электронная почта</label>
-                        <a href="mailto:info@zlatolit.ru" class="footer__email-link" title="Написать на почту">
-                            info@zlatolit.ru
+                        <a href="mailto:info@lemezit.ru" class="footer__email-link" title="Написать на почту">
+                            info@lemezit.ru
                         </a>
                     </div>
                 </div>
@@ -582,9 +582,9 @@
                             <span class="categories__title">Лемезит</span>
                         </div>
                         <div class="categories__item">
-                            <img class="categories__image" src="../assets/images/category.jpg" alt="Златолит"
+                            <img class="categories__image" src="../assets/images/category.jpg" alt="лемезит"
                                 width="161" height="123" />
-                            <span class="categories__title">Златолит</span>
+                            <span class="categories__title">лемезит</span>
                         </div>
                         <div class="categories__item">
                             <img class="categories__image" src="../assets/images/category.jpg" alt="Сланец" width="161"
