--- a/src/pages/payment_delivery.html
+++ b/src/pages/payment_delivery.html
@@ -19,9 +19,9 @@
         <div class="container header__container">
             <!-- Логотип -->
             <div class="header__logo">
-                <a href="/" class="header__logo-link" title="ZLATOLIT.RU">
-                    <img src="../assets/icons/logo.svg" alt="ZLATOLIT.RU" width="230" height="75"
-                        class="header__logo-img" />
+                <a href="/" class="header__logo-link" title="LEMEZIT.RU">
+                    <!-- <img src="../assets/icons/logo.svg" alt="LEMEZIT.RU" width="230" height="75"
+                        class="header__logo-img" /> -->
                 </a>
             </div>
 
@@ -60,8 +60,8 @@
                                     доставка</a>
                             </li>
                             <li class="nav__item">
-                                <a href="mailto:info@zlatolit.ru" class="nav__link nav__link--email"
-                                    title="Отправьте письмо на info@zlatolit.ru">info@zlatolit.ru</a>
+                                <a href="mailto:info@lemezit.ru" class="nav__link nav__link--email"
+                                    title="Отправьте письмо на info@lemezit.ru">info@lemezit.ru</a>
                             </li>
                         </ul>
                     </div>
@@ -112,7 +112,7 @@
                     <ul class="sidebar__menu-left">
                         <a href="#" class="sidebar__menu-item" title="Гранит">Гранит</a>
                         <a href="#" class="sidebar__menu-item" title="Лемезит">Лемезит</a>
-                        <a href="#" class="sidebar__menu-item" title="Златолит">Златолит</a>
+                        <a href="#" class="sidebar__menu-item" title="лемезит">лемезит</a>
                         <a href="#" class="sidebar__menu-item" title="Сланец">Сланец</a>
                     </ul>
                     <span class="sidebar__divider"></span>
@@ -154,9 +154,9 @@
                     <a href="tel:+79876543211" class="sidebar__phone" title="Позвонить по номеру +7 (987) 654-32-11">
                         +7 (987) 654-32-11
                     </a>
-                    <a href="mailto:info@zlatolit.ru" class="sidebar__email"
-                        title="Отправить письмо на info@zlatolit.ru">
-                        info@zlatolit.ru
+                    <a href="mailto:info@lemezit.ru" class="sidebar__email"
+                        title="Отправить письмо на info@lemezit.ru">
+                        info@lemezit.ru
                     </a>
                 </address>
             </div>
@@ -189,15 +189,15 @@
                     </div>
                     <div class="delivery-page__text">
                         <p class="contacts-page__text-item">
-                            ZLATOLIT.RU – горнодобывающая компания, осуществляющая добычу, переработку и продажу
-                            натурального природного камня златолит.
+                            LEMEZIT.RU – горнодобывающая компания, осуществляющая добычу, переработку и продажу
+                            натурального природного камня лемезит.
                         </p>
                         <p class="contacts-page__text-item">Наши карьеры по добыче камня находятся в республике
                             Башкортостан и Челябинской области.</p>
                         <p class="contacts-page__text-item">Модель нашего розничного бизнеса предполагает отправку камня
                             клиентам напрямую с карьера или производства. Это позволяет нам с уверенностью говорить о
-                            том, что цена на златолит у нас самая доступная на рынке камня России.</p>
-                        <p class="contacts-page__text-item">Наша миссия – добывая и обрабатывая златолит, мы даем нашим
+                            том, что цена на лемезит у нас самая доступная на рынке камня России.</p>
+                        <p class="contacts-page__text-item">Наша миссия – добывая и обрабатывая лемезит, мы даем нашим
                             клиентам возможность преображать этот мир.</p>
                     </div>
                 </div>
@@ -222,19 +222,19 @@
                     </div>
                     <div class="about-page__text">
                         <p class="about-page__text-item">
-                            ZLATOLIT.RU – горнодобывающая компания, осуществляющая добычу, переработку и продажу
-                            натурального природного камня златолит.
+                            LEMEZIT.RU – горнодобывающая компания, осуществляющая добычу, переработку и продажу
+                            натурального природного камня лемезит.
                         </p>
                         <p class="about-page__text-item">
                             Наши карьеры по добыче камня находятся в республике Башкортостан и Челябинской области.
                         </p>
                         <p class="about-page__text-item">
                             Модель нашего розничного бизнеса предполагает отправку камня клиентам напрямую с карьера или
-                            производства. Это позволяет нам с уверенностью говорить о том, что цена на златолит у нас
+                            производства. Это позволяет нам с уверенностью говорить о том, что цена на лемезит у нас
                             самая доступная на рынке камня России.
                         </p>
                         <p class="about-page__text-item">
-                            Наша миссия – добывая и обрабатывая златолит, мы даем нашим клиентам возможность преображать
+                            Наша миссия – добывая и обрабатывая лемезит, мы даем нашим клиентам возможность преображать
                             этот мир.
                         </p>
                     </div>
@@ -256,9 +256,9 @@
                         </div>
                         <div class="contacts__item">
                             <span class="contacts__icon contacts__icon--email"></span>
-                            <a href="mailto:info@zlatolit.ru" class="contacts__link contacts__link--email"
+                            <a href="mailto:info@lemezit.ru" class="contacts__link contacts__link--email"
                                 title="Написать на почту">
-                                info@zlatolit.ru
+                                info@lemezit.ru
                             </a>
                         </div>
                     </div>
@@ -271,10 +271,10 @@
     <footer class="footer">
         <div class="container footer__container">
             <!-- MOBILE LOGO -->
-            <a href="/" class="footer__logo-mobile" title="ZLATOLIT.RU"></a>
+            <a href="/" class="footer__logo-mobile" title="LEMEZIT.RU"></a>
             <!-- LEFT COLUMN: Logo, working -->
             <div class="footer__column footer__column--left">
-                <a href="/" class="footer__logo" title="ZLATOLIT.RU"></a>
+                <a href="/" class="footer__logo" title="LEMEZIT.RU"></a>
                 <div class="footer__working-hours">
                     <label class="footer__label" for="hours">Режим работы</label>
                     <ul class="footer__hours-list" aria-labelledby="hours">
@@ -301,8 +301,8 @@
                     <div class="footer__contact-item">
                         <div class="footer__contact-block">
                             <label class="footer__label" for="email">Электронная почта</label>
-                            <a href="mailto:info@zlatolit.ru" class="footer__email-link" title="Написать на почту">
-                                info@zlatolit.ru
+                            <a href="mailto:info@lemezit.ru" class="footer__email-link" title="Написать на почту">
+                                info@lemezit.ru
                             </a>
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                     </li>
                 </ul>
                 <p class="footer__copyright" title="Авторские права">
-                    &copy; 2012-2025. <a href="/" class="footer__legal-link" title="ZLATOLIT.RU">ZLATOLIT.RU</a>. Все права защищены.
+                    &copy; 2012-2025. <a href="/" class="footer__legal-link" title="LEMEZIT.RU">LEMEZIT.RU</a>. Все права защищены.
                 </p>
             </div>
 
@@ -369,8 +369,8 @@
                 <div class="footer__contact-item">
                     <div class="footer__contact-block">
                         <label class="footer__label" for="email">Электронная почта</label>
-                        <a href="mailto:info@zlatolit.ru" class="footer__email-link" title="Написать на почту">
-                            info@zlatolit.ru
+                        <a href="mailto:info@lemezit.ru" class="footer__email-link" title="Написать на почту">
+                            info@lemezit.ru
                         </a>
                     </div>
                 </div>
@@ -456,9 +456,9 @@
                             <span class="categories__title">Лемезит</span>
                         </div>
                         <div class="categories__item">
-                            <img class="categories__image" src="../assets/images/category.jpg" alt="Златолит"
+                            <img class="categories__image" src="../assets/images/category.jpg" alt="лемезит"
                                 width="161" height="123" />
-                            <span class="categories__title">Златолит</span>
+                            <span class="categories__title">лемезит</span>
                         </div>
                         <div class="categories__item">
                             <img class="categories__image" src="../assets/images/category.jpg" alt="Сланец" width="161"
