Added email page

--- a/src/pages/email.html
+++ b/src/pages/email.html
@@ -19,7 +19,7 @@
                             <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
                                 <tr>
                                     <td align="left">
-                                        <img src="../assets/images/logo-email.png" alt="LEMEZIT.RU" width="180"
+                                        <img src="../assets/images/logo-email.png" alt="LEMEZIT.RU" width="180" height="100%"
                                             style="display: block;">
                                     </td>
                                     <td align="right"
@@ -37,14 +37,14 @@
                     <tr>
                         <td align="left" style="padding: 0 30px;">
                             <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0"
-                                style="background-color: #D3991A; color: #1e1e1e; padding: 20px; border-radius: 0 0 8px 8px;">
+                                style="background-color: #744746; color: #fff; padding: 20px; border-radius: 0 0 8px 8px;">
                                 <tr>
                                     <td style="padding: 30px 25px 25px;">
                                         <h2 style="margin-bottom: 15px; font-size: 20px; font-weight: bold;">Ваш заказ
                                             оформлен!
                                         </h2>
                                         <p style="margin-bottom: 20px; font-size: 16px;">Ваш заказ: <a href="#"
-                                                style="color: #1e1e1e; text-decoration: underline;">Песчаник зелёный</a>
+                                                style="color: #fff; text-decoration: underline;">Песчаник зелёный</a>
                                         </p>
                                         <p style="line-height: 24px;">Размер: 1.5 - 2 <br> Количество: 1 м² <br>
                                             Итоговая сумма: <b>290Р</b></p>
@@ -59,7 +59,7 @@
 
                     <tr>
                         <td style="padding: 20px 30px; font-family: Arial, sans-serif; color: #1e1e1e;">
-                            <h2 style="margin: 0; font-size: 24px; font-weight: normal;">Брусчатка из природного камня —
+                            <h2 style="margin: 0; font-size: 24px; font-weight: normal;">Лемезит из природного камня —
                                 лучший материал</h2>
                         </td>
                     </tr>
@@ -94,7 +94,7 @@
                     <tr>
                         <td align="center" style="padding: 20px 30px;">
                             <a href="#"
-                                style="background-color: #1e1e1e; color: #ffffff; text-decoration: none; padding: 12px 24px; font-size: 16px; font-family: Arial, sans-serif; border-radius: 5px; display: inline-block; width: 100% !important;">Перейти
+                                style="background-color: #744746; color: #ffffff; text-decoration: none; padding: 12px 24px; font-size: 16px; font-family: Arial, sans-serif; border-radius: 5px; display: inline-block; width: 100% !important;">Перейти
                                 на сайт для подробной информации</a>
                         </td>
                     </tr>
